syntax = "proto3";

package golem.common;

message ResourceLimits {
  int64 available_fuel = 1;
  uint64 max_memory_per_worker = 2;
}
