syntax = "proto3";

package golem.plan;

import "golem/common/uuid.proto";

message PlanId {
  golem.common.UUID value = 1;
}
